# SCPPRT

./: CMakeLists.txt  Config.hpp  Main.cpp  README.md
Containers/: DoublyLinkedList.hpp  Stack.hpp  String.hpp  Vector.hpp
Memory/: Alloc.hpp  HeapManager.hpp
Test/: CustomMalloc.cpp
Types/: Int.hpp
